# GEPA-Mindfulness-superalignment

./: .gitattributes  .gitignore  ADVERSARIAL_README.md  AGENTS.md  APPROACH_COMPARISON.md  CLAUDE_CODE_PROMPT_SHORT.md  CODING_STANDARDS.md  CONTRIBUTING.md  CORRECTED_IMPLEMENTATION_CHECKLIST.md  DECEPTION_CIRCUIT_ABLATION.md  FINAL_SUMMARY.md  PR_DESCRIPTION.md  README.md  adversarial_circuit_tracer.py  adversarial_evaluator.py  adversarial_scenarios.jsonl  gepa  gepa_adversarial_integration.py  gepa_dual_path_integration.py  pyproject.toml  run_deception_ablation_workflow.new.py  run_deception_ablation_workflow.py  run_dual_path_ablation_workflow.py  sitecustomize.py  test_adversarial_cli.py  train_eggroll_mdt.py  train_model.py
.beads/: README.md  issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
analysis/: dual_path_fingerprint_extractor.py
app/: __init__.py  main.py
app/services/: runners.py
app/views/: ablation.py  dual_path.py  home.py  tracer.py
beads/: README.md
configs/: alignment_battery_ci.yaml  alignment_battery_nightly.yaml  alignment_battery_periodic.yaml  objective_validator_robustness.yaml  scoring.yml
configs/classifier/: default.yml
configs/data/: mm_deception.yaml
configs/deception/: probes_linear.yaml
configs/deepspeed/: ds_zero2.yaml  ds_zero3.yaml
configs/experiments/: phase0_baseline.yaml
configs/factuality_certification/: advisory.yaml  gated.yaml  off.yaml  shadow.yaml  training.yaml
configs/factuality_observability/: v2_example.yaml
configs/grpo/: grpo_default.yaml
configs/models/: llama3_8b_lora.yaml  phi3_mini_lora.yaml
configs/policies/: dspy.yml  policy.yml
configs/ppo/: ppo_default.yaml
configs/structured_knowledge_safety/: agent_tool_use.yaml  cybersecurity.yaml  default.yaml  hazardous_capability.yaml  memory_boundary.yaml  privacy.yaml
configs/train/: common.yaml
configs/training/: phi3_dual_path.yml  phi3_dual_path_corrected.yml
data/constitutional_training/: README.md  constraint_respect_examples.jsonl  examples.jsonl  schema.json
data/evaluation/: dual_path_probes.jsonl
datasets/dual_path/: README.md  data.jsonl
datasets/ethical_qa/: README.md  sample.jsonl
datasets/labels/: annotation_guide.md  label_schema.json
datasets/ood_stress/: README.md  sample.jsonl
datasets/paired_chains/: README.md  data.jsonl
docs/: 17_CASE_FRAMEWORK.md  ALIGNMENT_EVAL_BATTERY.md  GEPA Mindfulness Constitution.txt  GEPA_Mindfulness_Constitution.md  NEWCOMER_GUIDE.md  README.md  deception_research.md  distributed.md  execution_flow.md  factuality_observability_v2.md  grn_integration.md  long_context.md  participatory_agency.md  scoring_pipeline.md  structured_logging.md  style-guide.md  synthetic_dataset.md  thought_alignment.md  value_decomposition.md
evals/: __init__.py  corrigibility_repair_eval.py  proxy_gaming_eval.py  rationale_faithfulness_eval.py  reality_contact_eval.py  semantic_laundering_eval.py
evaluation/: __init__.py  dual_path_eval.py  gepa_alignment_scoring.py  registry.py  run_alignment_battery.py  schema.py
evaluation/suites/: __init__.py  common.py
examples/: README.md  run_cpu_demo.py  sample_trace.jsonl  self_tracing_sample.jsonl
examples/cpu_demo/: run_cpu_demo.py
gepa_datasets/abstention_calibration/: README.md  data.jsonl
gepa_datasets/anti_scheming/: README.md  data.jsonl
gepa_datasets/ethical_qa/: README.md  data.jsonl
gepa_datasets/ood_stress/: README.md  data.jsonl
gepa_datasets/thought_trace_templates/: README.md  ethical_icubed.jsonl  ood_injection.jsonl
gepa_mindfulness/: __init__.py  metrics.py
gepa_mindfulness/adapters/: README.md  __init__.py  policy_adapter.py  tracing_adapter.py
gepa_mindfulness/configs/: README.md  default.yaml  vllm.yaml
gepa_mindfulness/core/: README.md  __init__.py  abstention.py  abstention_rewards.py  adversarial.py  circuit_tracer_adapter.py  dual_path.py  (+7 more)
matplotlib/: __init__.py
mindful_trace_gepa/: __init__.py
networkx/: __init__.py
notebooks/: README.md  eval_deception_acl2025.ipynb  ft_llama3_8b_unsloth_gepa.ipynb  ft_phi3_mini_unsloth_gepa.ipynb
policies/: default_cw4.yml  dspy.yml
reasoning-generalization-tracer/: README.md
rubrics/: cooperation_reasoning_rubric.md  reality_contact_rubric.md  refusal_redirection_rubric.md  stakes_ambiguity_calibration_rubric.md
scripts/: README.md  __init__.py  ablate_deception_circuits.py  analyze_deception_fingerprints.py  compare_models.py  deception_dashboard.py  generate_constitutional_dataset.py  labels_export.py  labels_import.py  run_full_pipeline.sh  run_llama3_simple.py  run_phi3_simple.py  synthetic_dataset_tool.py  train_classifier.py  train_model.py  validate_ablation.py
src/: __init__.py  adversarial_circuit_tracer.py  adversarial_evaluator.py  dual_path_circuit_tracer.py  dual_path_evaluator.py
synthetic_data/: README.md  __init__.py
tests/: conftest.py  test_17_case_clarifying_abstention.py  test_abstention_quality.py  test_abstention_rewards.py  test_adaptive_trajectory_evaluation.py  test_aggregate_confidence.py  test_aggregator_parser.py  test_alignment_adapters_toy.py  test_alignment_calibration_metrics.py  test_alignment_gepa_scoring.py  test_alignment_registry.py  test_alignment_runner_dry_run.py  test_alignment_schema.py  test_app_runner_commands.py  test_attribution_graphs.py  test_baseline_evaluator.py  test_circuit_tracer.py  test_classifier_smoke.py  test_cli_minimal.py  test_cli_score_auto.py  test_cognitive_pairwise_training.py  test_complete_integration.py  test_config.py  test_constitutional_training_schema.py  test_constraint_respect_principles.py  test_context_classifier.py  test_corrected_integration.py  test_correlation_analysis.py  test_cpu_demo.py  test_dapo_hybrid_trainer.py  test_deception_probe_synthetic.py  test_deception_signals.py  test_detectors.py  test_dspy_compile.py  test_dspy_contrastive_cli.py  test_dspy_disabled.py  test_dspy_run_dual_path_cli.py  test_dual_path.py  test_dual_path_dataset_schema.py  test_dual_path_runner.py  (+48 more)
tools/: merge_run_inspection.py
(+319 files in other folders)
