[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa-mindfulness"
version = "0.1.0"
description = "Mindfulness-aligned GEPA tooling and viewer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GEPA Mindfulness" }]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "textual>=0.20",
    "transformers>=4.37",
]

[project.optional-dependencies]
pdf = ["weasyprint>=53"]
dspy = ["dspy-ai>=2.5"]

[project.scripts]
gepa = "mindful_trace_gepa.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["mindful_trace_gepa", "gepa_mindfulness"]
package-dir = { "mindful_trace_gepa" = "src/mindful_trace_gepa", "gepa_mindfulness" = "gepa_mindfulness" }

[tool.setuptools.package-data]
mindful_trace_gepa = ["viewer/*.html", "viewer/*.css", "viewer/*.js", "viewer/*.html.new", "viewer/*.css.new", "viewer/*.js.new"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.(pyi?)$"
extend-exclude = "/notebooks/"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
mypy_path = "src"
