[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa-mindfulness"
version = "0.1.0"
description = "Mindfulness-aligned GEPA tooling and viewer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GEPA Mindfulness" }]
dependencies = [
    "click>=8.1",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "torch>=2.9.0",
    "textual>=0.20",
    "transformers>=4.37",
]

[project.optional-dependencies]
pdf = ["weasyprint>=53"]
dspy = ["dspy-ai>=2.5"]

[project.scripts]
gepa = "mindful_trace_gepa.cli:main"

[tool.setuptools]
include-package-data = true
packages = [
    "mindful_trace_gepa",
    "mindful_trace_gepa.value_decomp",
    "gepa_mindfulness",
    "rg_tracer",
    "rg_tracer.scoring",
    "semantic_intent_robustness",
    "objective_validator_robustness",
    "factuality_certification",
]

[tool.setuptools.package-dir]
mindful_trace_gepa = "src/mindful_trace_gepa"
gepa_mindfulness = "gepa_mindfulness"
rg_tracer = "reasoning-generalization-tracer/src/rg_tracer"
semantic_intent_robustness = "modules/semantic_intent_robustness"
objective_validator_robustness = "modules/objective_validator_robustness"
factuality_certification = "src/factuality_certification"

[tool.setuptools.package-data]
mindful_trace_gepa = [
    "viewer/*.html",
    "viewer/*.css",
    "viewer/*.js",
    "viewer/*.html.new",
    "viewer/*.css.new",
    "viewer/*.js.new",
]
semantic_intent_robustness = [
    "examples/*",
]
objective_validator_robustness = [
    "examples/*",
]
factuality_certification = [
    "configs/factuality_certification/*.yaml",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.(pyi?)$"
extend-exclude = "/notebooks/"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = [
    "mindful_trace_gepa",
    "gepa_mindfulness",
    "rg_tracer",
    "semantic_intent_robustness",
    "objective_validator_robustness",
    "factuality_certification",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
mypy_path = "src:modules:reasoning-generalization-tracer/src"

[tool.pytest.ini_options]
pythonpath = [
    "reasoning-generalization-tracer/src",
    "src",
    "modules",
]
