[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa-mindfulness"
version = "0.1.0"
description = "Mindfulness-aligned GEPA tooling and viewer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GEPA Mindfulness" }]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
base = []
train = [
    "torch>=2.9.0",
    "textual>=0.20",
    "transformers>=4.37",
]
interpret = [
    "matplotlib>=3.7",
    "networkx>=3.0",
]
pdf = ["weasyprint>=53"]
dspy = ["dspy-ai>=2.5"]
vllm = ["vllm>=0.6"]
all = [
    "dspy-ai>=2.5",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "torch>=2.9.0",
    "textual>=0.20",
    "transformers>=4.37",
    "vllm>=0.6",
    "weasyprint>=53",
]
dev = [
    "build>=1.2",
    "black>=24.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
gepa = "mindful_trace_gepa.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
mindful_trace_gepa = "src/mindful_trace_gepa"
gepa_mindfulness = "gepa_mindfulness"
rg_tracer = "reasoning-generalization-tracer/src/rg_tracer"
semantic_intent_robustness = "modules/semantic_intent_robustness"
cognitive_pairwise_training = "modules/cognitive_pairwise_training"
socratic_self_refine = "modules/socratic_self_refine"
objective_validator_robustness = "modules/objective_validator_robustness"
factuality_certification = "src/factuality_certification"
evaluation = "evaluation"

[tool.setuptools.packages.find]
where = [".", "src", "modules", "reasoning-generalization-tracer/src"]
include = [
    "app*",
    "cognitive_pairwise_training*",
    "evaluation*",
    "factuality_certification*",
    "gepa_mindfulness*",
    "mindful_trace_gepa*",
    "objective_validator_robustness*",
    "rg_tracer*",
    "semantic_intent_robustness*",
    "socratic_self_refine*",
    "synthetic_data*",
]
exclude = [
    "build*",
    "dist*",
    "modules.*",
    "tests*",
    "*.tests",
    "*.tests.*",
]

[tool.setuptools.package-data]
mindful_trace_gepa = [
    "viewer/*.html",
    "viewer/*.css",
    "viewer/*.js",
]
semantic_intent_robustness = [
    "examples/*",
]
objective_validator_robustness = [
    "examples/*",
]
factuality_certification = [
    "configs/factuality_certification/*.yaml",
]
"gepa_mindfulness.schema_v3" = [
    "registry.yaml",
    "README.md",
]
"rg_tracer.schema_v3" = [
    "registry.yaml",
]

[tool.setuptools.exclude-package-data]
objective_validator_robustness = [
    "tests/*",
]
semantic_intent_robustness = [
    "tests/*",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.(pyi?)$"
extend-exclude = "/notebooks/"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = [
    "mindful_trace_gepa",
    "gepa_mindfulness",
    "rg_tracer",
    "semantic_intent_robustness",
    "cognitive_pairwise_training",
    "socratic_self_refine",
    "objective_validator_robustness",
    "factuality_certification",
    "evaluation",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
mypy_path = "src:modules:reasoning-generalization-tracer/src"

[tool.pytest.ini_options]
pythonpath = [
    "reasoning-generalization-tracer/src",
    "src",
    "modules",
]
